--- a/Flipi.FlightsManager/Dockerfile
+++ b/Flipi.FlightsManager/Dockerfile
@@ -1,13 +1,13 @@
-FROM mcr.microsoft.com/dotnet/core/sdk:2.2 AS build-env
+FROM mcr.microsoft.com/dotnet/core/sdk:3.1 AS build-env
 WORKDIR /app
 
-COPY *.csproj ./
+COPY Flipi.FlightsManager/*.csproj ./
 RUN dotnet restore
 
-COPY . ./
-RUN dotnet publish -c Release -o out
+COPY Flipi.FlightsManager/ ./
+RUN dotnet publish Flipi.FlightsManager.sln -c Release -o out
 
-FROM mcr.microsoft.com/dotnet/core/aspnet:2.2
+FROM mcr.microsoft.com/dotnet/core/aspnet:3.1
 WORKDIR /app
 COPY --from=build-env /app/out .
-ENTRYPOINT ["dotnet", "aspnetapp.dll"]
+ENTRYPOINT ["dotnet", "Flipi.Flights.dll"]
