--- a/Flipi.DataFiller/package.json
+++ b/Flipi.DataFiller/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "kafka-node": "5.0.0"
+    "kafka-node": "5.0.0",
+    "mongodb": "3.5.7"
   }
 }
